--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "check": "yarn typescript && yarn lint",
     "build": "rm -rf lib && bob build && yarn copy-dts && yarn delete-dts && npm pack",
     "copy-dts": "copyfiles -u 1 \"src/**/*.d.ts\" lib/typescript",
-    "delete-dts": "find ./lib/commonjs -name '*.d.js*' -delete && find ./lib/module -name '*.d.js*' -delete"
+    "delete-dts": "find ./lib/commonjs -name '*.d.js*' -delete && find ./lib/module -name '*.d.js*' -delete",
+    "release": "release-it"
   },
   "repository": {
     "type": "git",
@@ -46,6 +47,7 @@
   "homepage": "https://github.com/mustapha-ghlissi/react-native-select-picker#readme",
   "devDependencies": {
     "@react-native/eslint-config": "^0.74.85",
+    "@release-it/conventional-changelog": "^8.0.1",
     "@types/react": "^18.3.3",
     "@types/react-native-vector-icons": "^6.4.18",
     "copyfiles": "^2.4.1",
@@ -57,11 +59,12 @@
     "react-native-gesture-handler": "^2.17.1",
     "react-native-reanimated": "^3.13.0",
     "react-native-vector-icons": "^10.1.0",
+    "release-it": "^17.5.0",
     "typescript": "^5.5.3"
   },
   "peerDependencies": {
-    "@types/react-native-vector-icons": ">=6.4.18",
     "@types/react": "*",
+    "@types/react-native-vector-icons": ">=6.4.18",
     "react": "*",
     "react-native": "*",
     "react-native-gesture-handler": ">=2.16.2",
