--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
+.env
+.npmrc
 example/node_modules
 *.tar
 *.tgz
