--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v4
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --legacy-peer-deps
       - name: Configure Git User
         run: |
           git config --global user.name "Mustapha GHLISSI"
