--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,7 +2,7 @@
   "printWidth": 80,
   "arrowParens": "avoid",
   "singleQuote": true,
+  "bracketSameLine": true,
   "tabWidth": 2,
-  "trailingComma": "es5",
-  "useTabs": false
+  "trailingComma": "es5"
 }
