--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "build": "rm -rf lib && bob build && yarn copy-dts && yarn delete-dts && npm pack",
     "copy-dts": "copyfiles -u 1 \"src/**/*.d.ts\" lib/typescript",
     "delete-dts": "find ./lib/commonjs -name '*.d.js*' -delete && find ./lib/module -name '*.d.js*' -delete",
-    "release": "release-it --no-git.requireCleanWorkingDir"
+    "release": "release-it --no-git.requireCleanWorkingDir",
+    "commitlint": "commitlint --edit"
   },
   "repository": {
     "type": "git",
@@ -46,17 +47,22 @@
   },
   "homepage": "https://github.com/mustapha-ghlissi/react-native-select-picker#readme",
   "devDependencies": {
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@react-native/eslint-config": "^0.74.85",
     "@release-it/conventional-changelog": "^8.0.1",
     "@types/react": "^18.3.3",
     "@types/react-native-vector-icons": "^6.4.18",
     "copyfiles": "^2.4.1",
     "eslint": "^9.6.0",
+    "eslint-config-prettier": "^9.1.0",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.7",
     "prettier": "^3.3.2",
     "react": "^18.3.1",
     "react-native": "^0.74.3",
     "react-native-builder-bob": "^0.25.0",
-    "react-native-reanimated": "^3.13.0",
+    "react-native-reanimated": "^3.14.0",
     "react-native-vector-icons": "^10.1.0",
     "release-it": "^17.5.0",
     "typescript": "^5.5.3"
