--- a/.release-it.json
+++ b/.release-it.json
@@ -12,11 +12,8 @@
   },
   "plugins": {
     "@release-it/conventional-changelog": {
-      "preset": "angular"
+      "preset": "angular",
+      "infile": "CHANGELOG.md"
     }
-  },
-  "hooks": {
-    "before:init": ["npm run check"],
-    "after:bump": "npx auto-changelog -p"
   }
 }
